--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.1",
+    "react-twitter-auth": "0.0.10",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0"
   },
