--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^4.10.4",
     "passport": "^0.3.2",
     "passport-jwt": "^2.2.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "passport-twitter": "^1.0.4"
   }
 }
