--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "passport": "^0.3.2",
     "passport-jwt": "^2.2.1",
     "passport-local": "^1.0.0",
-    "passport-twitter": "^1.0.4"
+    "passport-twitter": "^1.0.4",
+    "passport-twitter-token": "^1.3.0",
+    "request": "^2.83.0"
   }
 }
